--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     font-family: 'Roboto', sans-serif;
     background: #65869f;
-    background: url("https://images.unsplash.com/photo-1484480974693-6ca0a78fb36b?w=1352&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
+  background: url("https://thoughtcatalog.files.wordpress.com/2017/03/stocksnap_fx3kscksrp.jpg?w=1140&h=760");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
